--- a/AppRiesgosPersonales/app/src/main/res/layout/fragment_smart_home.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/fragment_smart_home.xml
@@ -103,7 +103,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="20dp"
             android:elevation="10dp"
             app:cardCornerRadius="10dp">
 
@@ -180,6 +180,31 @@
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
+
+        <LinearLayout
+            android:id="@+id/sort_ll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/sort_iv"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/sort" />
+
+            <TextView
+                android:id="@+id/sortInfo_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="2dp"
+                android:textSize="12sp"
+                tools:text="Mayor a menor seguridad"/>
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/devicesPerfil_rv"
