--- a/AppRiesgosPersonales/app/src/main/res/layout/fragment_smart_home.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/fragment_smart_home.xml
@@ -189,6 +189,14 @@
             android:layout_marginRight="16dp"
             android:orientation="horizontal">
 
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:text="@string/tus_dispositivos" />
+
             <ImageView
                 android:id="@+id/sort_iv"
                 android:layout_width="22dp"
@@ -200,7 +208,7 @@
                 android:id="@+id/sortInfo_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
+                android:layout_gravity="end|center_vertical"
                 android:layout_marginLeft="2dp"
                 android:textSize="12sp"
                 tools:text="Mayor a menor seguridad"/>
