--- a/AppRiesgosPersonales/app/src/main/res/layout/fragment_asset_detail_eco.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/fragment_asset_detail_eco.xml
@@ -61,7 +61,7 @@
                         android:layout_height="wrap_content"
                         android:max="100"
                         android:thumb="@drawable/shape_custom_seek_bar"
-                        android:thumbOffset="22dp" />
+                        android:thumbOffset="@dimen/thumb_offset" />
                 </LinearLayout>
 
             </RelativeLayout>
@@ -69,7 +69,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="18dp">
+                android:paddingTop="12dp">
 
                 <TextView
                     android:id="@+id/reparabilidadTitle_tv"
@@ -107,14 +107,14 @@
                         android:layout_height="wrap_content"
                         android:max="100"
                         android:thumb="@drawable/shape_custom_seek_bar"
-                        android:thumbOffset="22dp" />
+                        android:thumbOffset="@dimen/thumb_offset" />
                 </LinearLayout>
             </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="18dp">
+                android:paddingTop="12dp">
 
                 <TextView
                     android:id="@+id/reciclabilidadTitle_tv"
@@ -152,14 +152,14 @@
                         android:layout_height="wrap_content"
                         android:max="100"
                         android:thumb="@drawable/shape_custom_seek_bar"
-                        android:thumbOffset="22dp" />
+                        android:thumbOffset="@dimen/thumb_offset" />
                 </LinearLayout>
             </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="18dp">
+                android:paddingTop="12dp">
 
                 <TextView
                     android:id="@+id/efClimaticaTitle_tv"
@@ -197,14 +197,14 @@
                         android:layout_height="wrap_content"
                         android:max="100"
                         android:thumb="@drawable/shape_custom_seek_bar"
-                        android:thumbOffset="22dp" />
+                        android:thumbOffset="@dimen/thumb_offset" />
                 </LinearLayout>
             </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="18dp"
+                android:paddingTop="12dp"
                 android:paddingBottom="12dp">
 
                 <TextView
@@ -243,7 +243,7 @@
                         android:layout_height="wrap_content"
                         android:max="100"
                         android:thumb="@drawable/shape_custom_seek_bar"
-                        android:thumbOffset="22dp" />
+                        android:thumbOffset="@dimen/thumb_offset" />
                 </LinearLayout>
             </RelativeLayout>
         </LinearLayout>
