--- a/AppRiesgosPersonales/app/src/main/res/values/dimens.xml
+++ b/AppRiesgosPersonales/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
 
     <dimen name="thumb_size">20dp</dimen>
     <dimen name="thumb_text_size">11sp</dimen>
+    <dimen name="thumb_offset">17dp</dimen>
 </resources>
