--- a/AppRiesgosPersonales/app/src/main/res/layout/rv_apps_app.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/rv_apps_app.xml
@@ -23,15 +23,39 @@
 
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/appName_tv"
-        android:layout_width="100dp"
-        android:layout_height="match_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:ellipsize="end"
-        android:singleLine="true"
-        tools:text="Aplicacion"/>
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/securityIcon_iv"
+            style="@style/RecyclerIconStyle"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/security" />
+
+        <ImageView
+            android:id="@+id/ecoIcon_iv"
+            style="@style/RecyclerIconStyle"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="2dp"
+            android:src="@drawable/energy_saving" />
+
+        <TextView
+            android:id="@+id/appName_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:singleLine="true"
+            tools:text="Aplicacion"/>
+
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -46,7 +70,6 @@
             android:id="@+id/appAddedIcon_iv"
             android:layout_width="15dp"
             android:layout_height="15dp"
-            android:layout_centerVertical="true"
             android:src="@drawable/check_circle"
             style="@style/RecyclerIconStyle"/>
 
