Implementar vista catalogo de categoria concreta

--- a/AppRiesgosPersonales/app/src/main/res/layout/rv_perfil_asset.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/rv_perfil_asset.xml
@@ -45,7 +45,7 @@
                 android:inputType="textMultiLine"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                tools:text="Aplicacion" />
+                tools:text="Dispositivo" />
 
             <ImageView
                 android:id="@+id/infoAddedIcon_iv"
