Añadir opciones de ordenación en catalogo de categoria concreta

--- a/AppRiesgosPersonales/app/src/main/res/layout/fragment_catalogo_categoria.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/fragment_catalogo_categoria.xml
@@ -5,6 +5,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:id="@+id/sort_ll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:padding="8dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:text="@string/vacio" />
+
+        <ImageView
+            android:id="@+id/sort_iv"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/sort" />
+
+        <TextView
+            android:id="@+id/sortInfo_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|center_vertical"
+            android:layout_marginLeft="2dp"
+            android:textSize="12sp"
+            tools:text="Mayor a menor seguridad"/>
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/assetsTipo_rv"
         android:layout_width="match_parent"
