--- a/AppRiesgosPersonales/app/src/main/res/layout/sorting_options_assets.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/sorting_options_assets.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/ordenar_activos_perfil_ll"
+    android:id="@+id/ordenar_activos_ll"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
